<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ActivityBrandDescPage">

    <ImageView
        android:id="@+id/iv_logo_activity_brand_desc_page"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:background="#0E0E0E"
        android:contentDescription="@string/iv_logo_activity_brand_desc_page"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/android_logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_round_avatar_activity_brand_desc_page"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="#B012EA"
        android:scaleType="center"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo_activity_brand_desc_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_activity_brand_desc_page"
        app:layout_constraintVertical_bias="0.566"
        android:contentDescription="@string/iv_round_avatar_activity_brand_desc_page" />

    <TextView
        android:id="@+id/tv_desc_activity_brand_desc_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="22dp"
        android:paddingTop="40dp"
        android:paddingEnd="22dp"
        android:text="@string/tv_desc_activity_brand_desc_page"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_activity_brand_desc_page" />
</androidx.constraintlayout.widget.ConstraintLayout>