<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_brand_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#BBC4C8">

        <ImageView
            android:id="@+id/iv_logo_brand_row"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="0dp"
            android:background="#00000000"
            android:contentDescription="@string/iv_logo_brand_row"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_name_brand_row"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:text="@string/tv_name_brand_row"
            android:textColor="#263238"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/iv_logo_brand_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_brand_row"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/tv_date_brand_row"
            android:textColor="#37474F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_logo_brand_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_brand_row" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>